--- a/app/src/main/res/layout/activity_league_table.xml
+++ b/app/src/main/res/layout/activity_league_table.xml
@@ -1,16 +1,93 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="League table"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"/>
+    <TableLayout
+        android:id="@+id/displayLinear"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-</RelativeLayout>
+        <TableRow
+            android:id="@+id/tableRowTitles"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/TextView00"
+                android:layout_weight="1"
+                android:background="@color/teal_700"
+                android:gravity="center"
+                android:padding="10dip"
+                android:text="Name"
+                android:textColor="#000000" />
+
+            <TextView
+                android:id="@+id/TextView01"
+                android:layout_weight="1"
+                android:background="@color/teal_700"
+                android:gravity="center"
+                android:padding="10dip"
+                android:text="Games"
+                android:textColor="#000000" />
+
+            <TextView
+                android:id="@+id/TextView02"
+                android:layout_weight="1"
+                android:background="@color/teal_700"
+                android:gravity="center"
+                android:padding="10dip"
+                android:text="Wins"
+                android:textColor="#000000" />
+
+            <TextView
+                android:id="@+id/TextView03"
+                android:layout_weight="1"
+                android:background="@color/teal_700"
+                android:gravity="center"
+                android:padding="10dip"
+                android:text="Draws"
+                android:textColor="#000000" />
+
+            <TextView
+                android:id="@+id/TextView04"
+                android:layout_weight="1"
+                android:background="@color/teal_700"
+                android:gravity="center"
+                android:padding="10dip"
+                android:text="Losses"
+                android:textColor="#000000" />
+
+            <TextView
+                android:id="@+id/TextView05"
+                android:layout_weight="1"
+                android:background="@color/teal_700"
+                android:gravity="center"
+                android:padding="10dip"
+                android:text="GF:GA"
+                android:textColor="#000000" />
+
+            <TextView
+                android:id="@+id/TextView06"
+                android:layout_weight="1"
+                android:background="@color/teal_700"
+                android:gravity="center"
+                android:padding="10dip"
+                android:text="Diff"
+                android:textColor="#000000" />
+
+            <TextView
+                android:id="@+id/TextView07"
+                android:layout_weight="1"
+                android:background="@color/teal_700"
+                android:gravity="center"
+                android:padding="10dip"
+                android:text="Points"
+                android:textColor="#000000" />
+
+        </TableRow>
+    </TableLayout>
+</LinearLayout>
