--- a/app/src/main/res/layout/activity_show_games.xml
+++ b/app/src/main/res/layout/activity_show_games.xml
@@ -12,6 +12,7 @@
         android:layout_height="0dp"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="120dp"
+        android:background="#4CAF50"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -19,15 +20,21 @@
 
     <Button
         android:id="@+id/btnReturnFromGames"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
+        android:layout_marginStart="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginRight="10dp"
         android:layout_marginBottom="50dp"
+        android:fontFamily="@font/myfont"
         android:text="Back to Main Menu"
+        app:backgroundTint="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
