--- a/app/src/main/res/layout/activity_new_game.xml
+++ b/app/src/main/res/layout/activity_new_game.xml
@@ -17,6 +17,7 @@
         android:layout_marginEnd="10dp"
         android:layout_marginRight="10dp"
         android:hint="Team A"
+        android:singleLine="true"
         app:layout_constraintEnd_toStartOf="@+id/tvVS"
         app:layout_constraintTop_toTopOf="parent"/>
 
@@ -29,6 +30,7 @@
         android:layout_marginStart="10dp"
         android:layout_marginLeft="10dp"
         android:hint="Team B"
+        android:singleLine="true"
         app:layout_constraintStart_toEndOf="@+id/tvVS"
         app:layout_constraintTop_toTopOf="@+id/etTeamA"/>
 
@@ -66,6 +68,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
         android:hint="Location"
+        android:singleLine="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etScoreA"/>
