--- a/app/src/main/res/layout/activity_show_games.xml
+++ b/app/src/main/res/layout/activity_show_games.xml
@@ -12,7 +12,7 @@
         android:layout_height="0dp"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="120dp"
-        android:background="#4CAF50"
+        android:background="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
